# Game-Ideas-Client

./: LICENSE  README.md
Exe/: DataBase.sqlite  c_rehash.pl
src/GameIdeas/: CMakeLists.txt  CMakeLists.txt.user.32b4538  main.cpp
src/GameIdeas/include/: databaseoperations.h  gameideas.h  genres.h  image.h  stabilityaiapi.h
src/GameIdeas/resources/: resources.qrc
src/GameIdeas/src/: databaseoperations.cpp  gameideas.cpp  genres.cpp  image.cpp  stabilityaiapi.cpp
src/GameIdeas/tests/: tests.cpp
src/GameIdeas/ui/: gameideas.ui  genres.ui  image.ui
